--- a/cautious-file.cabal
+++ b/cautious-file.cabal
@@ -1,7 +1,7 @@
 name:                cautious-file
-version:             0.1
+version:             0.1.1
 Cabal-Version:	     >= 1.6
-synopsis:            Ways to write a file cautiously, to reduce the chances of data loss due to crashes or power failures
+synopsis:            Ways to write a file cautiously, to reduce the chances of problems such as data loss due to crashes or power failures
 description:         If the posix flag is enabled, posix-specific functions are used to reduce the chance of data loss further
 category:            System
 license:             BSD3
@@ -9,7 +9,7 @@ license-file:        LICENSE
 copyright:	     Copyright (C) Robin Green 2009
 author:              Robin Green
 maintainer:          Robin Green <greenrd@greenrd.org>
-build-type:	     Simple
+build-type:	     Custom
 stability:	     experimental
 bug-reports:	     mailto:greenrd@greenrd.org
 tested-with:	     GHC == 6.10.3
