Add Test.hs to .cabal
Ignore-this: c1472f2c6746fb1f3f9c8ed2177f5a8d

darcs-hash:20090720003932-f04ea-304f71ec8c17214feee4be5e9d699c782d397495

--- a/cautious-file.cabal
+++ b/cautious-file.cabal
@@ -13,6 +13,7 @@ build-type:	     Custom
 stability:	     experimental
 bug-reports:	     mailto:greenrd@greenrd.org
 tested-with:	     GHC == 6.10.3
+extra-source-files:      Test.hs
 
 source-repository head
   type:     darcs
