--- a/cautious-file.cabal
+++ b/cautious-file.cabal
@@ -1,5 +1,5 @@
 name:                cautious-file
-version:             0.1.2
+version:             0.1.3
 Cabal-Version:	     >= 1.6
 synopsis:            Ways to write a file cautiously, to reduce the chances of problems such as data loss due to crashes or power failures
 description:         If the posix flag is enabled, posix-specific functions are used to reduce the chance of data loss further
@@ -24,9 +24,11 @@ Flag posix
     default: True
 
 Library
-  build-Depends:	base >= 4, base < 5, directory, filepath
+  hs-source-dirs:       src
+  build-Depends:	base >= 4, base < 5, directory, filepath, bytestring
   if flag(posix)
     cpp-options: -D_POSIX
     build-Depends: unix
+    exposed-modules:    System.Posix.ByteLevel, System.Posix.Fsync
   exposed-modules:      System.IO.Cautious
   ghc-options:          -Wall
